2005-01-10  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3948862> REGRESSION: missing images when RTFD is pasted into editable WebView

	This problem occurred because we were creating image elements before creating corresponding image resources. The fix is to have AppKit call us back to create the resources before it creates the elements.

        Reviewed by john.

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView _documentFragmentFromPasteboard:allowPlainText:]): don't deal with subresources since that's now done by the following method
        (-[WebHTMLView resourceForData:preferredFilename:]): new handler method called by AppKit

=== Safari-178 ===

2005-01-06  David Harrison  <harrison@apple.com>

        Reviewed by Dave Hyatt

        <rdar://problem/3588548> AX: tabbing does not work correctly with the screen reader and a focused link; need AXFocusedUIElement to work.

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView accessibilityFocusedUIElement]):
        Implement this so that AppKit can use it from NSAccessibilityHandleFocusChanged.

2005-01-05  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3936865> REGRESSION: canvas.drawImage no longer scales properly

        Reviewed by john.

        * WebCoreSupport.subproj/WebImageData.m: use the height of the inRect instead of the fromRect when setting the origin of the context

2005-01-04  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3928329> WebKit should pass nil for "language" to checkSpellingOfString:

        Reviewed by kocienda.

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView _isSelectionMisspelled]): pass nil not @"" for language

2004-12-21  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

	<rdar://problem/3888931> frame naming allows malicious site to bring up a window when you click on a link in another

        Implement a security check on name frame visbility. This is the